# edu-track

./: .env  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
api/: pyproject.toml
api/source/: settings.py
api/source/api/: app.py  config.py
api/source/api/auth/: __init__.py  config.py  router.py
api/source/api/discipline/: __init__.py  config.py  router.py
api/source/api/group/: __init__.py  config.py  router.py
api/source/api/mark/: __init__.py  config.py  router.py
api/source/api/student/: __init__.py  config.py  router.py
api/source/api/teacher/: __init__.py  config.py  router.py
api/source/api/track/: __init__.py  config.py  router.py
api/source/api/unit/: __init__.py  config.py  router.py
api/source/api/user/: __init__.py  config.py  router.py
api/source/certs/: jwt-private.pem  jwt-public.pem
api/source/database/: __init__.py
api/source/database/migrations/: env.py
api/source/database/models/: __init__.py  admin.py  base.py  discipline.py  discipline_group.py  discipline_teacher.py  disciplines.py  disciplines_groups.py  disciplines_teachers.py  group.py  groups.py  mark.py  marks.py  student.py  teacher.py  track.py  tracks.py  unit.py  units.py  user.py
api/source/database/repos/: Disciplines.py  Disciplines_Groups.py  Disciplines_Teachers.py  Groups.py  Marks.py  Student.py  Tracks.py  Units.py  __init__.py  admin.py  base.py  discipline.py  discipline_group.py  discipline_teacher.py  group.py  mark.py  student.py  teacher.py  track.py  unit.py  user.py
api/source/enums/: __init__.py  course_number.py  mark_type.py  semester_number.py  work_type.py
api/source/schemas/: stats.py
api/source/schemas/auth/: common.py  forms.py  responses.py
api/source/services/: auth.py  discipline.py  group.py  mark.py  stats.py  student.py  teacher.py  track.py  unit.py  user.py
api/source/utils/: __init__.py  auth.py  cases.py  dt.py  enums.py
auth/: pyproject.toml
auth/source/: settings.py
auth/source/database/: db.py
auth/source/schemas/: common.py  responses.py
auth/source/services/: auth.py
private_api/: Dockerfile  healthcheck.sh  pyproject.toml
private_api/source/api/: app.py
private_api/source/database/: __init__.py  config.py  db.py
public_api/: Dockerfile  pyproject.toml
public_api/source/api/: app.py
public_api/source/database/: __init__.py  db.py
(+144 files in other folders)
