[project]
name = "private-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]


[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
